2005-06-05  Bob Halley  <halley@nominum.com>

	* dns/query.py: The requirement that the "where" parameter be
	  an IPv4 or IPv6 address is now documented.

2005-06-04  Bob Halley  <halley@nominum.com>

	* dns/resolver.py: The resolver now does exponential backoff
	  each time it runs through all of the nameservers.

	* dns/resolver.py: rcodes which indicate a nameserver is likely
	  to be a "permanent failure" for a query cause the nameserver
	  to be removed from the mix for that query.

2005-01-30  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.3 released)

2004-10-25  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/TXT.py (TXT.from_text): The masterfile parser
	incorrectly rejected TXT records where a value was not quoted.

2004-10-11  Bob Halley  <halley@dnspython.org>

	* dns/message.py: Added make_response(), which creates a skeletal
	response for the specified query.  Added opcode() and set_opcode()
	convenience methods to the Message class.  Added the request_payload
	attribute to the Message class.

2004-10-10  Bob Halley  <halley@dnspython.org>

	* dns/zone.py (from_xfr): dns.zone.from_xfr() in relativization
	mode incorrectly set zone.origin to the empty name.

2004-09-02  Bob Halley  <halley@dnspython.org>

	* dns/name.py (Name.to_wire): The 'file' parameter to
	Name.to_wire() is now optional; if omitted, the wire form will
	be returned as the value of the function.

2004-08-14  Bob Halley  <halley@dnspython.org>

	* dns/message.py (Message.find_rrset): find_rrset() now uses an
	index, vastly improving the from_wire() performance of large
	messages such as zone transfers.

2004-08-07  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.2 released)

2004-08-04  Bob Halley  <halley@dnspython.org>

	* dns/query.py: sending queries to a nameserver via IPv6 now
	works.
	
	* dns/inet.py (af_for_address): Add af_for_address(), which looks
	at a textual-form address and attempts to determine which address
	family it is.
